# SUBMARIT

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  CONVERSION_SUMMARY.md  LICENSE  LOCAL_SEARCH_IMPLEMENTATION.md  README.md  TEST_SUMMARY.md  matlab_files_strategy.md  pyproject.toml  run_all_tests.py  test_basic_functionality.py  test_local_search.py
.github/workflows/: ci.yml  docs.yml
docs/: .buildinfo  Makefile  README.md  algorithms.html  api.html  cli_usage.md  contributing.html  faq.html  genindex.html  index.html  installation.html  matlab_compat.html  migration_guide.html  objects.inv  performance.html  py-modindex.html  quickstart.html  requirements.txt  search.html  searchindex.js
docs/.doctrees/: algorithms.doctree  api.doctree  contributing.doctree  faq.doctree  index.doctree  installation.doctree  matlab_compat.doctree  migration_guide.doctree  performance.doctree  quickstart.doctree
docs/.doctrees/api/: evaluation.doctree
docs/_modules/: index.html
docs/_modules/submarit/core/: base.html  substitution_matrix.html
docs/_modules/submarit/evaluation/: cluster_evaluator.html  statistical_tests.html  visualization.html
docs/_modules/submarit/io/: data_io.html  matlab_io.html
docs/_modules/submarit/utils/: matlab_compat.html
docs/_modules/submarit/validation/: kfold.html  p_values.html  rand_index.html  topk_analysis.html
docs/_sources/: algorithms.rst.txt  index.rst.txt  installation.rst.txt  matlab_compat.rst.txt  quickstart.rst.txt
docs/api/: evaluation.html
docs/source/: api.rst  conf.py  contributing.rst  faq.rst  index.rst  installation.rst  migration_guide.rst  performance.rst  quickstart.rst
docs/source/api/: evaluation.rst
examples/: 01_getting_started.ipynb  02_advanced_clustering.ipynb  03_performance_optimization.ipynb  04_visualization_gallery.ipynb  05_matlab_migration.ipynb  comprehensive_evaluation_demo.py  config_example.yaml  test_evaluation.py  test_validation.py
examples/notebooks/: 01_getting_started.ipynb  02_advanced_usage.ipynb  03_performance_optimization.ipynb
matlab_original/: CreateSubstitutionMatrix.m  GAPStatisticUniform.m  README.md  READMEFIRST.txt  RandCreateDist.m  RandEmpiricalP.m  RandIndex4.m  RunClusters.m  RunClusters2.m  RunClustersTopk.m  RunClustersTopk2.m  kEvaluateClustering.m  kSMCreateDist.m  kSMEmpiricalP.m  kSMEntropy.m  kSMEvaluateClustering.m  kSMLocalSearch.m  kSMLocalSearch2.m  kSMLocalSearchConstrained.m  kSMLocalSearchConstrained2.m  kSMNFold.m  kSMNFold2.m
src/submarit/: __init__.py  cli.py
src/submarit/algorithms/: __init__.py  local_search.py
src/submarit/core/: __init__.py  base.py  create_substitution_matrix.py  substitution_matrix.py
src/submarit/evaluation/: __init__.py  cluster_evaluator.py  entropy_evaluator.py  gap_statistic.py  statistical_tests.py  visualization.py
src/submarit/io/: __init__.py  data_io.py  matlab_io.py
src/submarit/utils/: __init__.py  matlab_compat.py
src/submarit/validation/: __init__.py  empirical_distributions.py  kfold.py  multiple_runs.py  p_values.py  rand_index.py  topk_analysis.py
tests/: README.md  __init__.py  conftest.py  test_coverage.py  test_edge_cases.py  test_evaluation.py  test_fixtures.py  test_integration.py  test_matlab_compat.py  test_performance.py  test_placeholder.py  test_property_based.py  test_regression.py  test_substitution_matrix.py
